<resources>
    <string name="app_name">GestionCallCenter</string>

    <string name="c">C</string>
    <string name="all">all</string>
    <string name="enter">enter</string>
    <string name="user">Usuario</string>
    <string name="login">Iniciar Sesión</string>
    <string name="pass">Contraseña</string>
    <string name="home">Inicio</string>
    <string name="call_register">Registrar Llamada</string>
    <string name="calls_register">Registrar Llamadas</string>
    <string name="perfil">Administrar Perfil</string>
    <string name="planillas">Planillas</string>
    <string name="administration">Administración</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Dirección postal</string>
    <string name="telefono">Número de teléfono</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="fecha_contratación">Fecha de contratación:</string>
    <string name="fecha">01/02/2019</string>
    <string name="empleado">Empleado</string>
    <string name="change_password">Cambiar Contraseña</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="select_day">Seleccionar Día</string>
    <string name="operador">Operador</string>
    <string name="minutos">Minutos</string>
    <string name="tipo_telefono">Tipo Teléfono</string>
    <string name="tipo_cliente">Tipo Cliente</string>
    <string name="movil">Móvil</string>
    <string name="fijo">Fijo</string>
    <string name="cliente">Cliente</string>
    <string name="publicidad">Publicidad</string>
    <string name="repite">Repite</string>
    <string name="edit_calls">Editar Llamadas</string>
    <string name="title_activity_edit_calls">Editar Llamadas</string>
    <string name="edit_last_call">Editar última llamada</string>
    <string name="calls_search">Buscar Llamadas</string>
    <string name="search_by_day">Buscar por día</string>
    <string name="search_by_operator">Buscar por operador</string>
    <string name="search_by_day_operator">Buscar por día y operador</string>
    <string name="all_calls">Todas mis llamadas</string>
    <string name="title_activity_call_results">CallResultsActivity</string>
    <string name="vacio" />
    <string name="call">Llamada</string>
    <string name="title_activity_call_edit">CallEditActivity</string>
    <string name="save_changes">Guardar Cambios</string>
    <string name="delete_call">Eliminar Llamada</string>
    <string name="calls">No hay resultados</string>
    <string name="empty_last_call">Aún no tienes llamadas registradas</string>
    <string name="planillas_mensuales">Planillas mensuales</string>
    <string name="planillas_anuales">Planillas Anuales</string>
    <string name="planilla_men_general">Planilla Mensual General</string>
    <string name="planilla_men_pubcli">Planilla Mensual Publi/Clientes</string>
    <string name="planilla_men_op">Planilla Mensual Operadores</string>
    <string name="planilla_anu_gen">Planilla Anual General</string>
    <string name="re_pass">Repetir Contraseña</string>
    <string name="title_activity_planilla">Planilla</string>
    <string name="empleados">Empleados</string>
    <string name="operadores">Operadores</string>
    <string name="title_activity_search_employee">Buscar Empleado</string>
    <string name="title_activity_search_operator">SearchOperatorActivity</string>
    <string name="title_activity_add_edit_employee">AddEditEmployeeActivity</string>
    <string name="name">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="lastname">Apellidos</string>
    <string name="direction">Dirección:</string>
    <string name="phone">Teléfono</string>
    <string name="dir">dirección</string>
    <string name="telf">teléfono</string>
    <string name="admin">Administrador</string>
    <string name="date">0000-00-00</string>
    <string name="rest_pass">Restaurar Contraseña</string>
    <string name="delete_employee">Eliminar Empleado</string>
    <string name="add_employee">Añadir Empleado</string>


</resources>
