<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_call_register"
            android:icon="@drawable/ic_phone_in_talk_24dp"
            android:title="@string/calls_register" />
        <item
            android:id="@+id/nav_planillas"
            android:icon="@drawable/ic_picture_as_pdf_24dp"
            android:title="@string/planillas"/>
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_account_circle_24dp"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_administration"
            android:icon="@drawable/ic_build_24dp"
            android:title="@string/administration" />
    </group>

    <item android:title="Otros">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>